--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 Django==3.1.2
 djangorestframework==3.12.1
+pip install mysqlclient
+pip install djangorestframework_simplejwt
+pip install PyJWT==1.7.1
